--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,15 +8,46 @@
 
     <title>Document</title>
 </head>
-<body>
+<style>
+.btnAddProductos{
+  width: 15%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #d6a811;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px 0 0 10px;
+}
+</style>
+<body class="d-flex flex-column min-vh-100">
     <header>
-        Este es el header de todas las vistas
+        <a href="/web">
+            <button class="btnAddProductos">Agregar Productos</button>
+        </a>
+        {{!-- Este es el header de todas las vistas
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-        </ul>
+        </ul> --}}
         </header>
         {{{body}}}
-    <footer>Este es el footer de todas las vistas</footer>
+    {{!-- <footer class="bg-dark row justify-content-center"> --}}
+        {{!-- <p class="text-light">
+            Footer de la Clase 10
+        </p> --}}
+            <div class="wrapper flex-grow-1"></div>
+
+         <footer class="container-fluid flex-grow-1 bg-dark">
+     <div class="row py-5">
+         <div class="col-lg-12 text-white text-center">
+             <h3 class="display-3 ">Bootstrap Clase 10</h3>
+             {{!-- <p class="lead mb-0">This footer is created by using Bootstrap.</p>
+             <p class="lead py-3">Snippet by BBBootstrap.</p> --}}
+         </div>
+     </div>
+ </footer>
+        {{!-- </footer> --}}
 </body>
 </html>
