--- a/views/listado.hbs
+++ b/views/listado.hbs
@@ -1,4 +1,14 @@
-<%- include('./header')-%>
+ {{!-- {{#if products}}
+  {{#each products}}
+      <li>Nombre: {{this.name}}</li>
+      <li>Thumbnail:{{this.thumbnail}}</li>
+      <li>Precio: {{this.precio}}</li>
+      <li>ID: {{this.id}}</li>
+    {{/each}}
+{{else}}
+  <p>No se encontraron productos</p>  
+  
+{{/if}} --}}
 
 <div class="container py-5">
     <div class="row text-center text-white mb-5">
@@ -7,27 +17,21 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-8 mx-auto">
-            <a href="/web"><button class="addProd">Agregar Productos</button></a>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-lg-8 mx-auto">
             <!-- List group-->
             <ul class="list-group shadow">
                 <!-- list group item-->
 
-                <% if (products) { %>
-                    <% products.forEach(function(producto){ %>
-
+                 {{#if products}}
+                  {{#each products}}
                 <li class="list-group-item">
                     <!-- Custom content-->
                     <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                         <div class="media-body order-2 order-lg-1">
-                            <h2 class="mt-0 font-weight-bold mb-2"><%= producto.name %></h2>
-                            <!-- {{!-- <p class="font-italic text-muted mb-0 small">128 GB ROM | 15.49 cm (6.1 inch) Display 12MP Rear Camera | 7MP Front Camera A12 Bionic Chip Processor</p> --}} -->
+                            <h2 class="mt-0 font-weight-bold mb-2">{{this.name}}</h2>
+                            {{!-- <p class="font-italic text-muted mb-0 small">128 GB ROM | 15.49 cm (6.1 inch) Display 12MP Rear Camera | 7MP Front Camera A12 Bionic Chip Processor</p> --}}
                             <div class="d-flex align-items-center justify-content-between mt-1">
-                                <h3 class="font-weight-bold my-2 text-center">$$ <%= producto.precio %></h3>
+                                <h3 class="font-weight-bold my-2 text-center">$${{this.precio}}</h3>
                                 <ul class="list-inline small">
                                     <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
                                     <li class="list-inline-item m-0"><i class="fa fa-star text-success"></i></li>
@@ -36,18 +40,32 @@
                                     <li class="list-inline-item m-0"><i class="fa fa-star-o text-gray"></i></li>
                                 </ul>
                             </div>
-                        </div><img src="<%= producto.thumbnail %>" alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
+                        </div><img src="{{this.thumbnail}}" alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
                     </div> <!-- End -->
                 </li> <!-- End -->
                 
-                <% }); %> 
-                <% } else{ %>  
+                    {{/each}}
+                  {{else}}
                       <p class="text-light">No se encontraron productos</p>  
                       
-                      <% } %>
+                    {{/if}}
                 
                 
             </ul> <!-- End -->
         </div>
     </div>
 </div>
+
+<style>
+  body {
+    background: linear-gradient(to right, #c04848, #480048);
+    min-height: 100vh
+}
+.text-gray {
+    color: #aaa
+}
+img {
+    height: 170px;
+    width: 140px
+}
+</style>
