--- a/views/inicio.hbs
+++ b/views/inicio.hbs
@@ -1,36 +1,69 @@
-<div class="container contact-form">
-    <div class="contact-image">
-        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
-    </div>
-    <div class="text-right ">
-      <button class="btnProductos"><a class="text-light" href="/api/productos"> Ver productos</a> </button>
+<div class='container contact-form'>
+  <div class='contact-image'>
+    <img
+      src='https://image.ibb.co/kUagtU/rocket_contact.png'
+      alt='rocket_contact'
+    />
   </div>
-    <form action="/api/productos" method="post">
-        <h3>Agrega un Producto</h3>
-       <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="form-group">
-                  <label for="name">Nombre del producto: </label>
-                    <input type="text" name="name" class="form-control" placeholder="example" value="" />
-                </div>
-                <div class="form-group">
-                  <label for="name">  Precio</label>
-                    <input type="text" name="precio" class="form-control" placeholder="$" value="" />
-                </div>
-                <div class="form-group">
-                  <label for="name">  URL de la imagen </label>
+  <div class='text-right'>
+    <button class='btnProductos'><a class='text-light' href='/api/productos'>
+        Ver productos</a>
+    </button>
+  </div>
+  <form id="productos-form">
+    <h3>Agrega un Producto</h3>
+    <div class='row justify-content-center'>
+      <div class='col-md-6'>
+        <div class='form-group'>
+          <label for='name'>Nombre del producto: </label>
+          <input
+          id="name"
+            type='text'
+            name='name'
+            class='form-control'
+            placeholder='example'
+            value=''
+          />
+        </div>
+        <div class='form-group'>
+          <label for='name'> Precio</label>
+          <input
+          id="price"
+            type='text'
+            name='precio'
+            class='form-control'
+            placeholder='$'
+            value=''
+          />
+        </div>
+        <div class='form-group'>
+          <label for='name'> URL de la imagen </label>
 
-                    <input type="text" name="thumbnail" class="form-control" placeholder="http://example/" value="" />
-                </div>
-                <div class="form-group justify-content-center">
-                    <input type="submit" name="btnSubmit" class="btnContact" value="Agregar Producto" />
-                </div>
-            </div>
-            <!-- <div class="col-md-6">
+          <input
+          id="thumbnail"
+            type='text'
+            name='thumbnail'
+            class='form-control'
+            placeholder='http://example/'
+            value=''
+          />
+        </div>
+        <div class='form-group justify-content-center'>
+          <input
+            type='submit'
+            name='btnSubmit'
+            class='btnContact'
+            value='Agregar Producto'
+          />
+        </div>
+      </div>
+      <!-- <div class="col-md-6">
                 <div class="form-group">
                     <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
                 </div>
             </div> -->
-        </div>
-    </form>
+    </div>
+  </form>
+  {{> listado }}
+
 </div>
